objects/vlocity_ins__CachedAPIResponse__c.object
<CustomObject>
    <description>Data model to be used for caching the api responses.</description>
    <fields>
        <fullName>vlocity_ins__ApiResponse__c</fullName>
        <description>Response of the API</description>
        <label>ApiResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApiURL__c</fullName>
        <description>Actual URL</description>
        <label>ApiURL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CacheKey__c</fullName>
        <description>Hashed key of the URL</description>
        <externalId>true</externalId>
        <label>CacheKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <description>Code of the related object, if data is cached based on object</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartTime__c</fullName>
        <label>EffectiveStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationTime__c</fullName>
        <label>ExpirationTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExternalCacheKey__c</fullName>
        <description>This will store the unique cart context key generated in external system.</description>
        <label>ExternalCacheKey</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputCartContextKey__c</fullName>
        <description>This will store the incoming cart context key in case of basket apis.</description>
        <externalId>true</externalId>
        <label>InputCartContextKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OverflowSequence__c</fullName>
        <description>In case the response size exceeds the size of ApiResponse__c field, it is split into multiple CachedAPIResponse__c records with incrementing the overflowsequence.</description>
        <label>Overflow Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <description>Validity of cache records.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pristine</fullName>
                </value>
                <value>
                    <fullName>stale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>item</fullName>
                    <default>true</default>
                    <label>item</label>
                </value>
                <value>
                    <fullName>contextDimensionsResultItem</fullName>
                </value>
                <value>
                    <fullName>contextCombinationsResultItem</fullName>
                </value>
                <value>
                    <fullName>itemDetails</fullName>
                </value>
                <value>
                    <fullName>priceResult</fullName>
                </value>
                <value>
                    <fullName>catalogCtxEligibilityResult</fullName>
                </value>
                <value>
                    <fullName>cartContext</fullName>
                </value>
                <value>
                    <fullName>eligibilityContext</fullName>
                </value>
                <value>
                    <fullName>hierarchyResult</fullName>
                </value>
                <value>
                    <fullName>itemConfig</fullName>
                </value>
                <value>
                    <fullName>orderConfiguration</fullName>
                </value>
                <value>
                    <fullName>dataProfileResultItem</fullName>
                </value>
                <value>
                    <fullName>ruleSetCombinationResultItem</fullName>
                </value>
                <value>
                    <fullName>catalogCtxQualificationMap</fullName>
                </value>
                <value>
                    <fullName>basketWrapper</fullName>
                </value>
                <value>
                    <fullName>assetReferenceKey</fullName>
                </value>
                <value>
                    <fullName>groupContext</fullName>
                </value>
                <value>
                    <fullName>pleOfferMap</fullName>
                </value>
                <value>
                    <fullName>basketPricing</fullName>
                </value>
                <value>
                    <fullName>bundleWrapper</fullName>
                </value>
                <value>
                    <fullName>promotionWrapper</fullName>
                </value>
                <value>
                    <fullName>compiledPromotionData</fullName>
                </value>
                <value>
                    <fullName>versionInfo</fullName>
                </value>
                <value>
                    <fullName>versionInfoList</fullName>
                </value>
                <value>
                    <fullName>timeSlicesList</fullName>
                </value>
                <value>
                    <fullName>timeSliceInfo</fullName>
                </value>
                <value>
                    <fullName>offerItem</fullName>
                </value>
                <value>
                    <fullName>ancestors</fullName>
                </value>
                <value>
                    <fullName>containsItem</fullName>
                </value>
                <value>
                    <fullName>compiledPricingData</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CachedAPIResponse</label>
    <nameField>
        <label>CachedAPIResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>